--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
+  "framework": "nextjs",
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
   "installCommand": "npm install",
   "devCommand": "npm run dev"
 }
